Criação de rodapé

--- a/index.html
+++ b/index.html
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link 
-        rel="stylesheet" 
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" 
-        crossorigin="anonymous" 
-        referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./styles/main.css">
-    <title>ComidAtiva</title>
-</head>
-<body>
-    <a href="./form.html">Ir para formulário</a>
-    
-    <script src="./scripts/main.js"></script>
-</body>
+<html lang="pt-bt">
+    <head>
+        <link rel="stylesheet" type="text/css" href="style.css/arquivo.css"/>
+        <meta charset="utg-8">
+     <meta name="viewport" content="width=device-widith, initial-scale=1">
+    </head>
+    <body>
+        <footer>
+         <img scr="./imagens/logo.jpg" alt="logotipo da marca" title="logotipo da marca">
+         <p>INÍCIO</p>
+         <p>SOLUÇÕES</p>
+         <p>FUNCIONALIDADES</p>
+         <p>TREINAMENTO</p>
+         <p>AGROHUB+</p>
+         <p>QUEM SOMOS</p>
+         <p>CARBONO COM CIÊNCIA</p>
+         <p>POLÍTICA DE PRIVACIDADE</p>
+         <h5>CONTATO</h5>
+         <P>suporte@agrohub.com.br</P>
+         <p>+55 (31) 99699-7816 (segunda à sexta, 8:30 -17:30)</p>
+        </footer>
+    </body>
 </html>
