Corrige indentações e integra as duas páginas

--- a/form.html
+++ b/form.html
@@ -13,6 +13,27 @@
     <title>ComidAtiva</title>
 </head>
 <body>
+    <nav>
+        <div class="logo-container">
+            <img class="logo" src="assets/images/logo_completo.png" alt="Logo do site" class="logo">
+        </div>
+
+        <ul class="menu">
+            <li>
+                <a href="./index.html" class="nav-menu-link">Home</a>
+            </li>
+            <li>
+                <a href="#" class="nav-menu-link">Quem somos </a>
+            </li>
+            <li>
+                <a href="./form.html" class="nav-menu-link">Contato </a>
+            </li>
+            <li>
+                <a href="#" class="nav-menu-link">Nosso Objetivo </a>
+            </li>
+        </ul>
+    </nav>
+
     <div class="form-page-container">
         <section class="info-section">
             <img src="./assets/images/logo_completo.png" alt="Logo da ComidAtiva">
