cria a página quem somos

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <a href="./index.html" class="nav-menu-link">Home</a>
             </li>
             <li>
-                <a href="#" class="nav-menu-link">Quem somos </a>
+                <a href="./quem-somos.html" class="nav-menu-link">Quem somos </a>
             </li>
             <li>
                 <a href="./form.html" class="nav-menu-link">Contato </a>
