add contatos dentro do form

--- a/form.html
+++ b/form.html
@@ -44,6 +44,29 @@
                 Junte-se à tantas outras empresas parceiras que fazem do nosso páis um lugar melhor! <br>
                 Envie as informações de contato da sua empresa que em breve um especialista do nosso time entrará em contato com você.
             </p>
+
+            <p>Ou entre em contato em um dos canais abaixo:</p>
+
+            <ul class="contact-list">
+                <li>
+                    <i class="fa-solid fa-envelope mr-2" style="font-size: 20px;"></i>
+                    suportecomidaativa@gmail.com
+                </li>
+
+                <li class="clickable">
+                    <a href="https://www.instagram.com/convidativa_/" target="_blank">
+                        <img src="./assets/vectors/Instagram_icon.png" alt="Instagram Logo">
+                        @comidativa_
+                    </a>
+                </li>
+
+                <li class="clickable">
+                    <a href="https://www.youtube.com/channel/UC1dZS4eDXej9875BUxK_XlQ" target="_blank">
+                        <img src="./assets/vectors/Youtube_logo.png" alt="Youtube Logo">
+                        @FiapGrupo8
+                    </a>
+                </li>
+            </ul>
         </section>
 
         <section class="form-section">
