Criação de rodapé

--- a/index.html
+++ b/index.html
@@ -1,24 +1,80 @@
 <!DOCTYPE html>
-<html lang="pt-bt">
-    <head>
-        <link rel="stylesheet" type="text/css" href="style.css/arquivo.css"/>
-        <meta charset="utg-8">
-     <meta name="viewport" content="width=device-widith, initial-scale=1">
-    </head>
-    <body>
-        <footer>
-         <img scr="./imagens/logo.jpg" alt="logotipo da marca" title="logotipo da marca">
-         <p>INÍCIO</p>
-         <p>SOLUÇÕES</p>
-         <p>FUNCIONALIDADES</p>
-         <p>TREINAMENTO</p>
-         <p>AGROHUB+</p>
-         <p>QUEM SOMOS</p>
-         <p>CARBONO COM CIÊNCIA</p>
-         <p>POLÍTICA DE PRIVACIDADE</p>
-         <h5>CONTATO</h5>
-         <P>suporte@agrohub.com.br</P>
-         <p>+55 (31) 99699-7816 (segunda à sexta, 8:30 -17:30)</p>
-        </footer>
-    </body>
+<html lang="pt-br">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+        integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="assets/css/style.css">
+
+    <title>Document</title>
+</head>
+<body>
+    <footer>
+        <div id="footer_content">
+            <img src="imagens/logo_textual_1.png" width="200px" height="auto" class="img">
+            <div class="footer-text">
+                
+                <ul class="footer-list">
+                    <li>
+                        <P>INÍCIO</P>
+                    </li>
+                    <li>
+                        <P>SOLUÇÕES</P>
+                    </li>
+                    <li>
+                        <P>FUNCIONALIDADES</P>
+                    </li>
+                    <li>
+                        <P>TREINAMENTO</P>
+                    </li>
+                    <li>
+                        <P>FIAP</P>
+                    </li>
+                    <li>
+                        <P>QUEM SOMOS</P>
+                    </li>
+                    <li>
+                        <P>MISSÃO, VISÃO E VALORES</P>
+                    </li>
+                    <li>
+                        <P>POLÍTICA DE PRIVACIDADE</P>
+                    </li>
+                </ul>
+                <ul class="footer-list">
+                    <li>
+                        <h3>CONTATO</h3>
+                    </li>    
+                    <li class="footer-social-midia">
+                        <div id="footer_social_midia">
+                            <a href="#" class="footer_link" id="E-mail">
+                                <i class="fa-regular fa-envelope icone"></i>
+                            </a>
+                        </div>
+                        <p class="E-mail">suportecomidaativa@gmail.com</p>
+                    </li>
+                </ul>
+                <div id="footer_contacts">
+
+                    <div id="footer_social_midia">
+                        <a href="https://www.youtube.com/@FiapGrupo8" target="_blank" class="footer_link" id="Youtube">
+                            <i class="fa-brands fa-youtube"></i>
+                        </a>
+                        <a href="https://www.instagram.com/convidativa_?igsh=ZWhocjBkZGE2a3M4&utm_source=qr" target="_blank" class="footer_link" id="Instagram">
+                            <i class="fa-brands fa-instagram"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="footer_copyright">
+            &#169
+            Copyrigth 2025 COMIDAATIVA. Todos dos direitos reservados.
+        </div>
+    </footer>
+</body>
+
 </html>
