--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" type="text/css" href="./styles/main.css">
-    <link rel="stylesheet" href="./styles/footer.css">
+  <link rel="stylesheet" type="text/css" href="./styles/footer.css">
   <link rel="stylesheet" type="text/css" href="./styles/index.css">
 </head>
 
@@ -65,33 +65,24 @@
   </main>
   <footer>
     <div id="footer_content">
-      <img src="assets/images/logo_textual.png" width="200px" height="auto" class="img">
       <div class="footer-text">
-
         <ul class="footer-list">
+          <img src="assets/images/logo_textual.png" width="200px" height="auto" class="img">
+          
           <li>
-            <P>INÍCIO</P>
+            <a href="./index.html">INÍCIO</a>
           </li>
           <li>
-            <P>SOLUÇÕES</P>
+            <a href="./nosso-objetivo.html">NOSSO OBJETIVO</a>
           </li>
           <li>
-            <P>FUNCIONALIDADES</P>
+            <a href="https://www.fiap.com.br/" target="_blank">FIAP</a>
           </li>
           <li>
-            <P>TREINAMENTO</P>
+            <a href="./quem-somos.html">QUEM SOMOS</a>
           </li>
           <li>
-            <P>FIAP</P>
-          </li>
-          <li>
-            <P>QUEM SOMOS</P>
-          </li>
-          <li>
-            <P>MISSÃO, VISÃO E VALORES</P>
-          </li>
-          <li>
-            <P>POLÍTICA DE PRIVACIDADE</P>
+            <a href="#">POLÍTICA DE PRIVACIDADE</a>
           </li>
         </ul>
         <ul class="footer-list">
@@ -108,14 +99,12 @@
           </li>
         </ul>
         <div id="footer_contacts">
-
           <div id="footer_social_midia">
-            <a href="https://www.youtube.com/@FiapGrupo8" target="_blank" class="footer_link" id="Youtube">
-              <i class="fa-brands fa-youtube"></i>
+            <a href="https://www.instagram.com/convidativa_/" target="_blank">
+                <img src="./assets/vectors/Instagram_icon.png" alt="Instagram Logo" width="40px">
             </a>
-            <a href="https://www.instagram.com/convidativa_?igsh=ZWhocjBkZGE2a3M4&utm_source=qr" target="_blank"
-              class="footer_link" id="Instagram">
-              <i class="fa-brands fa-instagram"></i>
+            <a href="https://www.youtube.com/@FiapGrupo8" target="_blank">
+                <img src="./assets/vectors/Youtube_logo.png" alt="Youtube Logo" width="40px">
             </a>
           </div>
         </div>
@@ -123,7 +112,7 @@
     </div>
     <div id="footer_copyright">
       &#169
-      Copyrigth 2025 COMIDAATIVA. Todos dos direitos reservados.
+      Copyrigth 2025 COMIDATIVA. Todos dos direitos reservados.
     </div>
   </footer>
 </body>
