--- a/nosso-objetivo.html
+++ b/nosso-objetivo.html
@@ -8,6 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" type="text/css" href="./styles/main.css">
+  <link rel="stylesheet" type="text/css" href="./styles/footer.css">
   <link rel="stylesheet" type="text/css" href="./styles/nosso-objetivo.css">
 </head>
 
@@ -37,7 +38,8 @@
     <div class="container">
       <div class="nosso-objetivo-title">
         <h1>Nosso objetivo</h1>
-        <p>Conectamos três importantes setores da alimentação para o benefício mútuo de todos, veja as vantagens para cada setor:</p>
+        <p>Conectamos três importantes setores da alimentação para o benefício mútuo de todos, veja as vantagens para
+          cada setor:</p>
         <hr>
       </div>
       <div class="objetivos-container">
@@ -91,6 +93,58 @@
       </div>
     </div>
   </main>
+  <footer>
+    <div id="footer_content">
+      <div class="footer-text">
+        <ul class="footer-list">
+          <img src="assets/images/logo_textual.png" width="200px" height="auto" class="img">
+
+          <li>
+            <a href="./index.html">INÍCIO</a>
+          </li>
+          <li>
+            <a href="./nosso-objetivo.html">NOSSO OBJETIVO</a>
+          </li>
+          <li>
+            <a href="https://www.fiap.com.br/" target="_blank">FIAP</a>
+          </li>
+          <li>
+            <a href="./quem-somos.html">QUEM SOMOS</a>
+          </li>
+          <li>
+            <a href="#">POLÍTICA DE PRIVACIDADE</a>
+          </li>
+        </ul>
+        <ul class="footer-list">
+          <li>
+            <h3>CONTATO</h3>
+          </li>
+          <li class="footer-social-midia">
+            <div id="footer_social_midia">
+              <a href="#" class="footer_link" id="E-mail">
+                <i class="fa-regular fa-envelope icone"></i>
+              </a>
+            </div>
+            <p class="E-mail">suportecomidaativa@gmail.com</p>
+          </li>
+        </ul>
+        <div id="footer_contacts">
+          <div id="footer_social_midia">
+            <a href="https://www.instagram.com/convidativa_/" target="_blank">
+              <img src="./assets/vectors/Instagram_icon.png" alt="Instagram Logo" width="40px">
+            </a>
+            <a href="https://www.youtube.com/@FiapGrupo8" target="_blank">
+              <img src="./assets/vectors/Youtube_logo.png" alt="Youtube Logo" width="40px">
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div id="footer_copyright">
+      &#169
+      Copyrigth 2025 COMIDATIVA. Todos dos direitos reservados.
+    </div>
+  </footer>
 </body>
 
 </html>
