ajusta títulos de páginas e favicon

--- a/form.html
+++ b/form.html
@@ -10,7 +10,8 @@
   <link rel="stylesheet" href="./styles/main.css">
   <link rel="stylesheet" type="text/css" href="./styles/footer.css">
   <link rel="stylesheet" href="./styles/form.css">
-  <title>ComidAtiva</title>
+  <title>ComidAtiva - Contato</title>
+  <link rel="icon" href="./assets/images/favicon.png">
 </head>
 
 <body>
