--- a/quem-somos.html
+++ b/quem-somos.html
@@ -4,12 +4,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" type="text/css" href="./styles/main.css">
-    <link rel="stylesheet" type="text/css" href="./styles/footer.css">
+  <link rel="stylesheet" type="text/css" href="./styles/footer.css">
   <link rel="stylesheet" type="text/css" href="./styles/quem-somos.css">
+  <title>ComidAtiva - Quem Somos</title>
+  <link rel="icon" href="./assets/images/favicon.png">
 </head>
 
 <body>
