--- a/nosso-objetivo.html
+++ b/nosso-objetivo.html
@@ -4,6 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+    integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" type="text/css" href="./styles/main.css">
@@ -98,8 +101,6 @@
     <div id="footer_content">
       <div class="footer-text">
         <ul class="footer-list">
-          <img src="assets/images/logo_textual.png" width="200px" height="auto" class="img">
-
           <li>
             <a href="./index.html">INÍCIO</a>
           </li>
@@ -118,32 +119,35 @@
         </ul>
         <ul class="footer-list">
           <li>
-            <h3>CONTATO</h3>
+            <h3 id="contato-footer">CONTATO</h3>
           </li>
-          <li class="footer-social-midia">
-            <div id="footer_social_midia">
-              <a href="#" class="footer_link" id="E-mail">
-                <i class="fa-regular fa-envelope icone"></i>
-              </a>
-            </div>
-            <p class="E-mail">suportecomidaativa@gmail.com</p>
+          <li class="email-footer" style="gap: 0.5rem">
+            <i class="fa-solid fa-envelope" style="font-size: 24px;"></i>
+            <span>suportecomidaativa@gmail.com</span>
+          </li>
+
+          <li>
+            <a href="https://www.instagram.com/convidativa_/" target="_blank">
+              <img src="./assets/vectors/Instagram_icon.png" alt="Instagram Logo" width="24px" height="auto">
+              @comidativa_
+            </a>
+          </li>
+
+          <li>
+            <a href="https://www.youtube.com/channel/UC1dZS4eDXej9875BUxK_XlQ" target="_blank">
+              <img src="./assets/vectors/Youtube_logo.png" alt="Youtube Logo" width="24px" height="auto">
+              @FiapGrupo8
+            </a>
           </li>
         </ul>
-        <div id="footer_contacts">
-          <div id="footer_social_midia">
-            <a href="https://www.instagram.com/convidativa_/" target="_blank">
-              <img src="./assets/vectors/Instagram_icon.png" alt="Instagram Logo" width="40px">
-            </a>
-            <a href="https://www.youtube.com/@FiapGrupo8" target="_blank">
-              <img src="./assets/vectors/Youtube_logo.png" alt="Youtube Logo" width="40px">
-            </a>
-          </div>
-        </div>
       </div>
     </div>
     <div id="footer_copyright">
-      &#169
-      Copyrigth 2025 COMIDATIVA. Todos dos direitos reservados.
+      <img src="assets/images/logo_textual.png" width="200px" height="auto" class="img">
+      <span>
+        &#169
+        Copyrigth 2025 COMIDATIVA. Todos dos direitos reservados.
+      </span>
     </div>
   </footer>
 </body>
