--- a/quem-somos.html
+++ b/quem-somos.html
@@ -4,6 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+    integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" type="text/css" href="./styles/main.css">
@@ -44,11 +47,15 @@
       <div class="row">
         <div class="membro col-4">
           <a href="https://github.com/IronProg" target="_blank" class="membro-img-container">
-            <img src="https://avatars.githubusercontent.com/u/61606251?s=400&u=5127217e180d931b6db87d92c77446112c3c13fb&v=4" alt="Iron Berny">
+            <img
+              src="https://avatars.githubusercontent.com/u/61606251?s=400&u=5127217e180d931b6db87d92c77446112c3c13fb&v=4"
+              alt="Iron Berny">
           </a>
           <h3>Iron Berny</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime quas amet quod accusantium enim atque doloribus impedit. Nostrum sapiente saepe dolore est debitis quasi voluptatibus hic vitae, nesciunt inventore aperiam?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime quas amet quod accusantium enim atque
+            doloribus impedit. Nostrum sapiente saepe dolore est debitis quasi voluptatibus hic vitae, nesciunt
+            inventore aperiam?
           </p>
         </div>
 
@@ -58,7 +65,9 @@
           </a>
           <h3>João Gabriel Vaz</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime quas amet quod accusantium enim atque doloribus impedit. Nostrum sapiente saepe dolore est debitis quasi voluptatibus hic vitae, nesciunt inventore aperiam?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime quas amet quod accusantium enim atque
+            doloribus impedit. Nostrum sapiente saepe dolore est debitis quasi voluptatibus hic vitae, nesciunt
+            inventore aperiam?
           </p>
         </div>
 
@@ -68,7 +77,9 @@
           </a>
           <h3>Luiz Eduardo Freitas Silva</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime quas amet quod accusantium enim atque doloribus impedit. Nostrum sapiente saepe dolore est debitis quasi voluptatibus hic vitae, nesciunt inventore aperiam?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime quas amet quod accusantium enim atque
+            doloribus impedit. Nostrum sapiente saepe dolore est debitis quasi voluptatibus hic vitae, nesciunt
+            inventore aperiam?
           </p>
         </div>
 
@@ -80,7 +91,9 @@
           </a>
           <h3>Maria Eduarda</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime quas amet quod accusantium enim atque doloribus impedit. Nostrum sapiente saepe dolore est debitis quasi voluptatibus hic vitae, nesciunt inventore aperiam?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime quas amet quod accusantium enim atque
+            doloribus impedit. Nostrum sapiente saepe dolore est debitis quasi voluptatibus hic vitae, nesciunt
+            inventore aperiam?
           </p>
         </div>
 
@@ -90,7 +103,9 @@
           </a>
           <h3>Sharon Nascimento</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime quas amet quod accusantium enim atque doloribus impedit. Nostrum sapiente saepe dolore est debitis quasi voluptatibus hic vitae, nesciunt inventore aperiam?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime quas amet quod accusantium enim atque
+            doloribus impedit. Nostrum sapiente saepe dolore est debitis quasi voluptatibus hic vitae, nesciunt
+            inventore aperiam?
           </p>
         </div>
 
@@ -102,8 +117,6 @@
     <div id="footer_content">
       <div class="footer-text">
         <ul class="footer-list">
-          <img src="assets/images/logo_textual.png" width="200px" height="auto" class="img">
-          
           <li>
             <a href="./index.html">INÍCIO</a>
           </li>
@@ -122,32 +135,35 @@
         </ul>
         <ul class="footer-list">
           <li>
-            <h3>CONTATO</h3>
+            <h3 id="contato-footer">CONTATO</h3>
           </li>
-          <li class="footer-social-midia">
-            <div id="footer_social_midia">
-              <a href="#" class="footer_link" id="E-mail">
-                <i class="fa-regular fa-envelope icone"></i>
-              </a>
-            </div>
-            <p class="E-mail">suportecomidaativa@gmail.com</p>
+          <li class="email-footer" style="gap: 0.5rem">
+            <i class="fa-solid fa-envelope" style="font-size: 24px;"></i>
+            <span>suportecomidaativa@gmail.com</span>
+          </li>
+
+          <li>
+            <a href="https://www.instagram.com/convidativa_/" target="_blank">
+              <img src="./assets/vectors/Instagram_icon.png" alt="Instagram Logo" width="24px" height="auto">
+              @comidativa_
+            </a>
+          </li>
+
+          <li>
+            <a href="https://www.youtube.com/channel/UC1dZS4eDXej9875BUxK_XlQ" target="_blank">
+              <img src="./assets/vectors/Youtube_logo.png" alt="Youtube Logo" width="24px" height="auto">
+              @FiapGrupo8
+            </a>
           </li>
         </ul>
-        <div id="footer_contacts">
-          <div id="footer_social_midia">
-            <a href="https://www.instagram.com/convidativa_/" target="_blank">
-                <img src="./assets/vectors/Instagram_icon.png" alt="Instagram Logo" width="40px">
-            </a>
-            <a href="https://www.youtube.com/@FiapGrupo8" target="_blank">
-                <img src="./assets/vectors/Youtube_logo.png" alt="Youtube Logo" width="40px">
-            </a>
-          </div>
-        </div>
       </div>
     </div>
     <div id="footer_copyright">
-      &#169
-      Copyrigth 2025 COMIDATIVA. Todos dos direitos reservados.
+      <img src="assets/images/logo_textual.png" width="200px" height="auto" class="img">
+      <span>
+        &#169
+        Copyrigth 2025 COMIDATIVA. Todos dos direitos reservados.
+      </span>
     </div>
   </footer>
 </body>
