ajustes finais para usar em outras telas

--- a/form.html
+++ b/form.html
@@ -92,7 +92,7 @@
         </div>
 
         <div class="input-group">
-          <label for="telefone">Telefone Comercial</label>
+          <label for="telefone">Telefone</label>
           <input type="tel" name="telefone" id="input-telefone">
         </div>
 
